--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+ipython==8.1.1
+matplotlib==3.2.2
+numpy==1.21.5
+pandas==1.3.5
+Pillow==9.0.1
+PyYAML==6.0
+seaborn==0.11.2
+tqdm==4.63.0
+translate_api==4.9.5
+translators==5.0.1
