--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 ipython==8.1.1
 matplotlib==3.2.2
 numpy==1.21.5
-pandas==1.3.5
 Pillow==9.0.1
 PyYAML==6.0
 seaborn==0.11.2
 tqdm==4.63.0
 translate_api==4.9.5
 translators==5.0.1
+datasets
+opencv_python_headless==4.5.5.64
+pandas==1.3
+plotly==5.6.0
+scikit_learn==1.0.2
+torchvision==0.12.0
+wandb==0.12.11
+ipywidgets==7.7.0
